kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app
    spec:
      containers:
      # TODO:AWS_ACCOUNT_IDの修正
      - image: 335270644332.dkr.ecr.ap-northeast-1.amazonaws.com/staging-sample-app:latest
        imagePullPolicy: Always
        name: app
        ports:
        - containerPort: 80
        volumeMounts:
        - name: mount
          mountPath: "/mount"
          readOnly: true
          
      volumes:
        - name: mount
          emptyDir: {}
